--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <body>
   <h1>Halo Pratama</h1>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, velit.</p>
 </body>
 
 </html>
